@@ -21,6 +21,7 @@
 ; format	== ((const char *), ...)	[printf() like]		[TODO]
 ; string	== (char *)
 ; string[argN]  == (char *)		[N>0]	[show only up to (arg N) bytes]
+; string[eltN]  == (char *)		[N>0]	[show only up to (elt N) bytes]
 ; string[retval] == (char *)			[show only up to (return val) bytes]
 ; string[arg0]	== (char *)			[same as string[retval]]
 ; string[N]     == (char *)             [N>0]   [show only up to N bytes]
@@ -29,11 +30,17 @@
 ; enum (key=value,key=value,...)		[enumeration, see below]
 ; array(type,argN)
 ;		== (type[SIZE])			[array of (arg N) elements]
+; array(type,eltN)
+;		== (type[SIZE])			[array of (struct element N) elements]
 ; array(type,N)	== (type[N])			[array of N elements]
-
+; struct(type,type,...)
+;		== (struct {...})		[struct of several types]
+;
 ; Backwards-compatibility:
 ; string0	== (char *)			[same as string[retval]]
 ; stringN	== (char *)		[N>0]	[same as string[argN]]
+
+
 
 ; Typedefs
 ;
@@ -56,6 +63,37 @@
 ; NOTE: Uses of array(...) alone are very rare. You almost always
 ; want array(...)*. The exceptions are when you have a fixed-size
 ; array.
+;
+; Structs
+;
+; NOTE: Uses of struct(...) alone are very rare. You almost always
+; want struct(...)* (a pointer to a struct) anyway. Most compilers
+; pass structs as pointers anyway, and those that don't are not yet
+; supported. The one time when you want to use a non-pointer
+; struct(...) type are when you have an array of structs, or a struct
+; containing another struct.
+;
+; For example, if you have
+;   struct s1 {
+;	int y_size;
+;	int * y;
+;	int z[3];
+;	struct { char c; } a;
+;	struct { char c; } * b;
+;   }
+; and a function
+;   void f(struct s1*)
+; then the corresponding ltrace spec is
+;   void f(struct(int,array(int,elt0),array(int,3),struct(char),struct(char)*)*)
+; which, formatted similarly to the C declaration, looks like
+;   void f(struct(
+;                 int,
+;                 array(int,elt0),
+;                 array(int,3),
+;                 struct(char),
+;                 struct(char)*
+;                )*
+;         )
 
 
 ; arpa/inet.h
